<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tittle_background"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/elearn" />

    </LinearLayout>

        <Button
            android:id="@+id/btnMateri"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VDaftarMateri"
            android:text="@string/materi" />

        <Button
            android:id="@+id/latihan_soal"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VDaftarLatihanSoal"
            android:text="@string/latihan_soal" />

        <Button
            android:id="@+id/artikel"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VDaftarArtikel"
            android:text="@string/artikel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bantuan"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="VBantuan"
                android:text="@string/bantuan" />

            <Button
                android:id="@+id/tentang_kami"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_round"
                android:onClick="VTentangKami"
                android:text="@string/tentang_kami" />
        </LinearLayout>

</LinearLayout>