<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".DaftarLatihanSoal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tittle_background"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            android:onClick="GoToMenuUtama"
            android:src="@drawable/elearn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bilangan_bulat"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VLatBilangan"
            android:text="@string/bilangan"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/himpunan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VLatHimpunan"
            android:text="@string/himpulan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/aljabar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VLatAljabar"
            android:text="@string/aljabar" />

        <Button
            android:id="@+id/persamaan_linear"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="VLatPersamaan"
            android:text="@string/persamaan" />

    </LinearLayout>
</LinearLayout>