<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".DaftarArtikel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tittle_background"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            android:onClick="GoToMenuUtama"
            android:src="@drawable/elearn" />

    </LinearLayout>

    <TextView
        android:id="@+id/artikel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/text_backgroud"
        android:onClick="VArtikel1"
        android:text="@string/artikel1"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/artikel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/text_backgroud"
        android:onClick="VArtikel2"
        android:text="@string/artikel2"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/artikel3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/text_backgroud"
        android:onClick="VArtikel3"
        android:text="@string/artikel3"
        android:textColor="@color/black"
        android:textSize="25sp" />
</LinearLayout>
